--- a/styles/_work-flow.scss
+++ b/styles/_work-flow.scss
@@ -7,6 +7,11 @@
     color: #ffffff;
     // background: url(../assets/iceberg-sky.svg) center;
     background-size: cover;
+
+    @media (max-width: 768px) {
+        height: 768px;
+    }
+
     &__eskimo {
         max-width: 100vw;
         z-index: $zindex--svg;
@@ -17,7 +22,7 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: 1080px;
+        height: 100%;
 
         @media (max-width: 1024px) {
             left: -21%;
@@ -36,14 +41,14 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: 1080px;
+        height: 100%;
         z-index: $zindex--svg;
     }
     &__waves-surface {
         position: absolute;
         top: 7%;
         width: 100vw;
-        height: 1080px;
+        height: 100%;
         margin-top: auto;
         background: url(../assets/iceberg/Iceberg-bg.svg) center;
         background-size: cover;
@@ -55,7 +60,7 @@
         left: 50%;
         max-width: 100vw;
         width: 100%;
-        height: 1080px;
+        height: 100%;
         transform: translate(-50%, -50%);
         background: url(../assets/iceberg.svg) top;
         background-size: cover;
@@ -65,7 +70,7 @@
         width: 100vw;
         position: absolute;
         top: 7%;
-        height: 1080px;
+        height: 100%;
         margin-top: auto;
         background: url(../assets/iceberg/Iceberg-waves.svg) center;
         background-size: cover;
@@ -75,8 +80,8 @@
         position: absolute;
         top: 7%;
         bottom: 0;
-        width: 1080px;
-        height: 850px;
+        width: 100%;
+        height: 80%;
         background: radial-gradient(circle at 50%, rgba(3, 49, 61, 0.4), rgba(3, 49, 61, 0) 75%);
         background-size: cover;
         z-index: $zindex--svg;
@@ -126,9 +131,8 @@
     &__bottom-fold {
         position: absolute;
         top: 0;
-        left: -5px;
         width: 100vw;
-        height: 1080px;
+        height: 100%;
         z-index: $zindex--svg;
         margin-top: auto;
         background: url(../assets/iceberg/Iceberg-fold.svg) center;
